--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
 
 
 
-<meta itemprop="name" content="hej">
+<meta itemprop="name" content="Mads Kjeldgaard">
 <meta itemprop="description" content="Website of composer Mads Kjeldgaard">
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://madskjeldgaard.github.io"/>
 
-<meta name="twitter:title" content="hej"/>
+<meta name="twitter:title" content="Mads Kjeldgaard"/>
 <meta name="twitter:description" content="Website of composer Mads Kjeldgaard"/>
 
 
 
-    <meta property="og:title" content="hej" />
+    <meta property="og:title" content="Mads Kjeldgaard" />
 <meta property="og:description" content="Website of composer Mads Kjeldgaard" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://madskjeldgaard.github.io/" />
